--- a/pratica_6/pratica_6_9293286_9293251.ipynb
+++ b/pratica_6/pratica_6_9293286_9293251.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "O trabalho desenvolvido nessa atividade prática tem como objetivo realizar uma avaliação do algoritmo de classificação por meio da matriz de confusão.\n",
     "\n",
-    "Iremos continuar o trabalho desenvolvido na prática V na qual foi utilizado o dataset Breast Cancer.\n",
+    "Iremos continuar o trabalho desenvolvido na prática 5, na qual foi utilizado o dataset Breast Cancer.\n",
     "\n",
     "## Dataset: Breast Cancer"
    ]
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Atributos e medida de avaliação\n",
+    "### 1 - Atributos e Medida de Avaliação\n",
     "\n",
     "Segundo as informações obtidas em https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.names, temos que os atributos mais relevantes para a classificação são:\n",
     "\n",
@@ -268,7 +268,7 @@
     "- worst area\n",
     "- worst smoothness\n",
     "\n",
-    "Logo, essas características serão utilizadas para realizar a classificação. Na avaliação do classificador vamos considerar que uma pessoa com cancêr maligno,benigno será da classe positiva,negativa respectivamente. Assim, o que desejamos é que a taxa de falso positivo seja amenizada, pois do ponto de vista médico não é interessante classificar uma pessoa com câncer benigno de maligno, visto que isso não é saudável para o psicológico do paciente além de que o tratamento aplicado a pessoa causaria danos desnecessários a saúde."
+    "Logo, essas características serão utilizadas para realizar a Classificação. Na avaliação do classificador, vamos considerar que uma pessoa com cancêr do tipo maligno corresponderá à classe positiva, e o câncer do tipo benigno será da classe negativa. Sendo assim, o que desejamos é que a taxa de falso positivo seja amenizada, pois do ponto de vista médico não é interessante classificar uma pessoa com câncer benigno de maligno, visto que isso não é saudável para o psicológico do paciente além de que o tratamento aplicado a pessoa causaria danos desnecessários a saúde."
    ]
   },
   {
@@ -470,6 +470,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2 - Execução da Função"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -502,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Escolha do classificador\n",
+    "#### Escolha do classificador\n",
     "\n",
     "Conforme o gráfico anterior note que todos os algoritmos possuem erros bem pequenos. Contudo, realizando uma comparação entre eles vemos que é possível descartar o perceptron e svm por serem relativamente \"grandes\" quando comparados com os demais.\n",
     "\n",
@@ -541,14 +548,14 @@
    "source": [
     "Note pelos gráficos que as classes podem ser consideradas linearmente separáveis de modo que apenas um corte no espaço pode conseguir distinguir bem os exemplos. Analisando-os vemos que cortes ortogonais (tipo de corte da árvore de decisão) permitem classificar bem o dataset. O 3nn também realiza isso porém com um pouco mais de dificuldade. \n",
     "\n",
-    "Assim, a escolha do algoritmo dado essas análises é a árvore de decisão."
+    "Assim, a escolha do algoritmo dado essas análises é a <b>Arvore de Decisão</b>."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Amostragem e desempenho\n",
+    "### 3 - Amostragem e Desempenho\n",
     "\n",
     "Após verificar que o algoritmo Árvore de Decisão é o mais indicado para o nosso problema, nós iremos utilizar as seguintes técnicas de amostragem:\n",
     "\n",
@@ -713,7 +720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matriz de confusão"
+    "### 4 - Matriz de confusão"
    ]
   },
   {
@@ -778,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
