--- a/exercicio_6/VarSelectionHouse.ipynb
+++ b/exercicio_6/VarSelectionHouse.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EM CONSTRUÇÃO"
+    "# Seleção de variáveis\n",
+    "\n",
+    "Neste notebook iremos estudar o dataset __houses__ com o objetivo de avaliar a interação de primeira e segunda ordem que as variáveis causam umas nas outras. Além disso, será aplicado uma seleção de variáveis por meio do método stepwise."
    ]
   },
   {
@@ -70,6 +72,13 @@
     "#Leitura e apresentacao do dataset\n",
     "casas <- read.table(\"houses.dat\", header=T)\n",
     "head(casas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ajuste de dois modelos com todos os parâmetros (exceto taxes) avaliando a interação de primeira e segunda ordem."
    ]
   },
   {
@@ -163,6 +172,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analisando o p-value de cada variável vemos que existem umas que são mais relevantes e outras não. Note no modelo 2 (modN2) que as interações de segunda ordem mais relevantes são __new:size e baths:size__. Isso nos demonstra que existe relações entre variáveis que devemos considerar em nossa modelagem. Por exemplo, o valor da casa ser nova aparenta afetar o seu tamanho.\n",
+    "\n",
+    "Vamos testar se há igualdade dos desvios para ambos os modelos por meio do teste F. Isso nos demonstrará se os modelos são estatísticamente iguais ou não."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -208,6 +226,13 @@
    "source": [
     "#Testando se os desvios são iguais\n",
     "anova(modN1,modN2,test='F')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pelo resultado do p-value vemos que deve-se rejeitar a hipótese nula de que ambos possuem desvios iguais. Sabendo que os modelos são diferentes iremos criar um novo que contenha as interações mais relevantes. Após esse passo iremos remove-las individualmente para verificar o seu efeito no modelo."
    ]
   },
   {
@@ -309,10 +334,26 @@
     }
    ],
    "source": [
+    "#Modelo com as interações mais relevantes\n",
     "modN3 = with(casas,lm(price ~ beds + baths + new + size + baths*new + new*size))\n",
+    "\n",
+    "#Descrição do modelo 3\n",
     "summary(modN3)\n",
+    "\n",
+    "#Removendo uma interação\n",
     "summary(update(modN3,.~. - new:baths))\n",
+    "\n",
+    "#Removendo outra interação\n",
     "summary(update(modN3,.~. - new:size))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analisando as 3 opções do terceiro modelo criado, note que o último indica que apenas size é uma variável relevante. Por isso iremos descartá-lo. Comparando o primeiro com o segundo notamos que o seu valor de adjusted R-squared são bem parecidos. Como o segundo consegue explicar bem os dados com menos parâmetros iremos escolhe-lo para continuar este notebook.\n",
+    "\n",
+    "Dado a opção 2 do terceiro modelo vamos remover a variável baths e avaliar o efeito disso."
    ]
   },
   {
