Add some analysis

--- a/exercicio_6/VarSelectionHouse.ipynb
+++ b/exercicio_6/VarSelectionHouse.ipynb
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analisando o p-value de cada variável vemos que existem umas que são mais relevantes e outras não. Note no modelo 2 (modN2) que as interações de segunda ordem mais relevantes são __new:size e baths:size__. Isso nos demonstra que existe relações entre variáveis que devemos considerar em nossa modelagem. Por exemplo, o valor da casa ser nova aparenta afetar o seu tamanho.\n",
+    "Analisando o p-value de cada variável vemos que existem umas que são mais relevantes e outras não. Note no modelo 2 (modN2) que as interações de segunda ordem mais relevantes são __beds:size, baths:new e new:size__. Isso nos demonstra que existe relações entre variáveis que devemos considerar em nossa modelagem. Tal fato ocorre pois uma variável acaba afetando a outra.\n",
     "\n",
     "Vamos testar se há igualdade dos desvios para ambos os modelos por meio do teste F. Isso nos demonstrará se os modelos são estatísticamente iguais ou não."
    ]
@@ -245,8 +245,41 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "lm(formula = price ~ beds + baths + new + size + baths * new + \n",
-       "    new * size)\n",
+       "lm(formula = price ~ beds + baths + new + size + beds:size + \n",
+       "    baths * new + new * size)\n",
+       "\n",
+       "Residuals:\n",
+       "     Min       1Q   Median       3Q      Max \n",
+       "-144.342  -28.045   -3.326   18.060  180.538 \n",
+       "\n",
+       "Coefficients:\n",
+       "              Estimate Std. Error t value Pr(>|t|)    \n",
+       "(Intercept)  1.356e+02  5.419e+01   2.503 0.014073 *  \n",
+       "beds        -5.505e+01  1.762e+01  -3.125 0.002383 ** \n",
+       "baths        1.228e+01  1.218e+01   1.008 0.316002    \n",
+       "new          9.072e+01  7.754e+01   1.170 0.245019    \n",
+       "size        -3.178e-03  3.232e-02  -0.098 0.921879    \n",
+       "beds:size    3.086e-02  9.059e-03   3.406 0.000979 ***\n",
+       "baths:new   -1.115e+02  4.531e+01  -2.462 0.015684 *  \n",
+       "new:size     1.040e-01  2.865e-02   3.630 0.000466 ***\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "Residual standard error: 48.7 on 92 degrees of freedom\n",
+       "Multiple R-squared:  0.7851,\tAdjusted R-squared:  0.7688 \n",
+       "F-statistic: 48.02 on 7 and 92 DF,  p-value: < 2.2e-16\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "lm(formula = price ~ beds + baths + new + size + baths:new + \n",
+       "    new:size)\n",
        "\n",
        "Residuals:\n",
        "     Min       1Q   Median       3Q      Max \n",
@@ -277,26 +310,28 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "lm(formula = price ~ beds + baths + new + size + new:size)\n",
+       "lm(formula = price ~ beds + baths + new + size + beds:size + \n",
+       "    new:size)\n",
        "\n",
        "Residuals:\n",
        "     Min       1Q   Median       3Q      Max \n",
-       "-181.045  -27.047   -5.318   14.777  189.677 \n",
+       "-149.708  -27.820   -1.907   16.914  173.827 \n",
        "\n",
        "Coefficients:\n",
-       "             Estimate Std. Error t value Pr(>|t|)    \n",
-       "(Intercept) -19.80698   26.53101  -0.747  0.45719    \n",
-       "beds         -5.07973   10.15570  -0.500  0.61811    \n",
-       "baths         7.63252   12.66301   0.603  0.54813    \n",
-       "new         -80.07128   51.61507  -1.551  0.12419    \n",
-       "size          0.10326    0.01304   7.921 4.68e-12 ***\n",
-       "new:size      0.06173    0.02208   2.795  0.00628 ** \n",
+       "              Estimate Std. Error t value Pr(>|t|)   \n",
+       "(Intercept) 138.824314  55.629290   2.496  0.01434 * \n",
+       "beds        -53.990032  18.087758  -2.985  0.00362 **\n",
+       "baths         4.811920  12.114243   0.397  0.69212   \n",
+       "new         -58.398959  49.710414  -1.175  0.24308   \n",
+       "size          0.005414   0.032989   0.164  0.86999   \n",
+       "beds:size     0.029752   0.009291   3.202  0.00187 **\n",
+       "new:size      0.055025   0.021174   2.599  0.01088 * \n",
        "---\n",
        "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
        "\n",
-       "Residual standard error: 52.41 on 94 degrees of freedom\n",
-       "Multiple R-squared:  0.7457,\tAdjusted R-squared:  0.7322 \n",
-       "F-statistic: 55.13 on 5 and 94 DF,  p-value: < 2.2e-16\n"
+       "Residual standard error: 50 on 93 degrees of freedom\n",
+       "Multiple R-squared:  0.7709,\tAdjusted R-squared:  0.7562 \n",
+       "F-statistic: 52.17 on 6 and 93 DF,  p-value: < 2.2e-16\n"
       ]
      },
      "metadata": {},
@@ -307,26 +342,28 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "lm(formula = price ~ beds + baths + new + size + baths:new)\n",
+       "lm(formula = price ~ beds + baths + new + size + beds:size + \n",
+       "    baths:new)\n",
        "\n",
        "Residuals:\n",
        "     Min       1Q   Median       3Q      Max \n",
-       "-212.664  -31.048   -5.088   18.072  167.790 \n",
+       "-177.362  -32.645   -1.494   19.940  157.986 \n",
        "\n",
        "Coefficients:\n",
-       "             Estimate Std. Error t value Pr(>|t|)    \n",
-       "(Intercept) -26.71176   27.88880  -0.958    0.341    \n",
-       "beds         -7.97357   10.51145  -0.759    0.450    \n",
-       "baths         4.52548   13.26817   0.341    0.734    \n",
-       "new          20.96484   85.39741   0.245    0.807    \n",
-       "size          0.11721    0.01258   9.319 5.16e-15 ***\n",
-       "baths:new    14.65982   36.29788   0.404    0.687    \n",
+       "              Estimate Std. Error t value Pr(>|t|)   \n",
+       "(Intercept) 143.548384  57.581832   2.493  0.01444 * \n",
+       "beds        -60.506512  18.669856  -3.241  0.00165 **\n",
+       "baths         2.376277  12.625038   0.188  0.85111   \n",
+       "new          56.149019  81.836558   0.686  0.49435   \n",
+       "size          0.010772   0.034121   0.316  0.75294   \n",
+       "beds:size     0.032064   0.009627   3.331  0.00124 **\n",
+       "baths:new     2.622243  34.682165   0.076  0.93989   \n",
        "---\n",
        "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
        "\n",
-       "Residual standard error: 54.49 on 94 degrees of freedom\n",
-       "Multiple R-squared:  0.725,\tAdjusted R-squared:  0.7104 \n",
-       "F-statistic: 49.57 on 5 and 94 DF,  p-value: < 2.2e-16\n"
+       "Residual standard error: 51.78 on 93 degrees of freedom\n",
+       "Multiple R-squared:  0.7543,\tAdjusted R-squared:  0.7385 \n",
+       "F-statistic: 47.59 on 6 and 93 DF,  p-value: < 2.2e-16\n"
       ]
      },
      "metadata": {},
@@ -335,13 +372,16 @@
    ],
    "source": [
     "#Modelo com as interações mais relevantes\n",
-    "modN3 = with(casas,lm(price ~ beds + baths + new + size + baths*new + new*size))\n",
+    "modN3 = with(casas,lm(price ~ beds + baths + new + size + beds:size + baths*new + new*size))\n",
     "\n",
     "#Descrição do modelo 3\n",
     "summary(modN3)\n",
     "\n",
     "#Removendo uma interação\n",
-    "summary(update(modN3,.~. - new:baths))\n",
+    "summary(update(modN3,.~. - beds:size))\n",
+    "\n",
+    "#Removendo uma interaçã\n",
+    "summary(update(modN3,.~. - baths:new))\n",
     "\n",
     "#Removendo outra interação\n",
     "summary(update(modN3,.~. - new:size))"
@@ -351,9 +391,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analisando as 3 opções do terceiro modelo criado, note que o último indica que apenas size é uma variável relevante. Por isso iremos descartá-lo. Comparando o primeiro com o segundo notamos que o seu valor de adjusted R-squared são bem parecidos. Como o segundo consegue explicar bem os dados com menos parâmetros iremos escolhe-lo para continuar este notebook.\n",
+    "Analisando os modelos que possuiram alguma iteração retirada, note que o segundo possui um valor de adjusted R-squared (0.7562) menor comparado aos outros. \n",
     "\n",
-    "Dado a opção 2 do terceiro modelo vamos remover a variável baths e avaliar o efeito disso."
+    "Além disso, com relação ao modelo que possui todos os parâmetros veja que seu valor de adjusted R-squared é menor, mas como essa diferença é muito pequena e temos menos parâmetros no primeiro, iremos escolhe-lo."
    ]
   },
   {
@@ -366,25 +406,26 @@
       "text/plain": [
        "\n",
        "Call:\n",
-       "lm(formula = price ~ beds + new + size + new:size)\n",
+       "lm(formula = price ~ beds + new + size + beds:size + new:size)\n",
        "\n",
        "Residuals:\n",
        "     Min       1Q   Median       3Q      Max \n",
-       "-181.982  -28.088   -6.876   15.571  194.062 \n",
+       "-150.013  -27.452   -2.112   16.851  171.296 \n",
        "\n",
        "Coefficients:\n",
-       "             Estimate Std. Error t value Pr(>|t|)    \n",
-       "(Intercept) -14.67865   25.04536  -0.586  0.55921    \n",
-       "beds         -3.81395    9.90285  -0.385  0.70100    \n",
-       "new         -77.65111   51.28592  -1.514  0.13332    \n",
-       "size          0.10694    0.01148   9.316 4.78e-15 ***\n",
-       "new:size      0.06084    0.02196   2.771  0.00673 ** \n",
+       "              Estimate Std. Error t value Pr(>|t|)   \n",
+       "(Intercept) 143.470985  54.141190   2.650  0.00945 **\n",
+       "beds        -53.637336  17.984834  -2.982  0.00364 **\n",
+       "new         -56.685782  49.300599  -1.150  0.25314   \n",
+       "size          0.006840   0.032645   0.210  0.83448   \n",
+       "beds:size     0.030021   0.009225   3.254  0.00158 **\n",
+       "new:size      0.054409   0.021022   2.588  0.01118 * \n",
        "---\n",
        "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
        "\n",
-       "Residual standard error: 52.23 on 95 degrees of freedom\n",
-       "Multiple R-squared:  0.7447,\tAdjusted R-squared:  0.734 \n",
-       "F-statistic: 69.28 on 4 and 95 DF,  p-value: < 2.2e-16\n"
+       "Residual standard error: 49.78 on 94 degrees of freedom\n",
+       "Multiple R-squared:  0.7706,\tAdjusted R-squared:  0.7584 \n",
+       "F-statistic: 63.14 on 5 and 94 DF,  p-value: < 2.2e-16\n"
       ]
      },
      "metadata": {},
@@ -392,8 +433,58 @@
     }
    ],
    "source": [
-    "modN4 = update(modN3,.~. - new:baths - baths)\n",
+    "modN4 = update(modN3,.~. - baths:new - baths)\n",
     "summary(modN4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos realizar uma interpretação de parâmetros nesse modelo para verificar como as interação afetam o valor da predição. Considere os seguintes cenários:\n",
+    "\n",
+    "a) Aumento de 100 pés quadrados no valor predito de uma casa antiga de dois quartos. <br>\n",
+    "b) Aumento de 100 pés quadrados no valor predito de uma casa nova de 3 quartos.\n",
+    "\n",
+    "Considerando que:\n",
+    "\n",
+    "b0: intercept <br>\n",
+    "b1: beds <br>\n",
+    "b2: new <br>\n",
+    "b3: size  <br>\n",
+    "b4: beds:size <br>\n",
+    "b5: new:size\n",
+    "\n",
+    "Nosso modelo é:\n",
+    "\n",
+    "__y= b0 + x1*b1 + x2*b2 + x3*b3 + x1*x3*b4 + x2*x3*b5__\n",
+    "\n",
+    "\n",
+    "a) Resolução:\n",
+    "\n",
+    "__y = b0 + 2*b1 + x3*b3 + 2*x3*b4 <br>\n",
+    "y*= b0 + 2*b1 + (x3+100)*b3 + 2*(x3+100)*b4 __<br>\n",
+    "\n",
+    "\n",
+    "__y*-y = 100 * b3 + 2*100*b4 = 100(b3 + 2*b4) = 100 * (0.006840 + 2*0.030021) = 6.6882__\n",
+    "\n",
+    "Portanto, um aumento de 100 pés em uma casa antiga de dois quartos implica em um aumento de 6.6882 no seu preço.\n",
+    "\n",
+    "b) Resolução:\n",
+    "\n",
+    "__y= b0 + 3*b1 + b2 + x3*b3 + 3*x3*b4 + x3*b5 <br>\n",
+    "y* = b0 + 3*b1 + b2 + (x3+100)*b3 + 3*(x3+100)*b4 + (x3+100)*b5__\n",
+    "\n",
+    "__y*-y = 100*b3 + 3*100*b4 + 100*b5 = 100 * (b3 + 3*b4 + b5) = 100 * (0.006840 + 3*0.030021+0.054409+ = 15.1312__\n",
+    "\n",
+    "Portanto, um aumento de 100 pés em uma casa nova de três quartos implica em um aumento de 15.1312 no seu preço."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pelos itens _a_ e _b_ note como os valores de b4 e b5 afetaram no aumento do preço. Sem eles tal aumento seria com toda certeza bem diferente."
    ]
   }
  ],
