--- a/exercicio_2/AED_MODELAGEM.ipynb
+++ b/exercicio_2/AED_MODELAGEM.ipynb
@@ -471,9 +471,7 @@
    "source": [
     "## Conclusão\n",
     "\n",
-    "Após todas as etapas fica evidente que é extremamente necessário realizar uma análise dos dados antes de gerar um modelo. Caso isso não tivesse sido feito, teríamos escolhido um modelo errado que obteria falsas conclusões. Além disso, ao final foi possível identificar que o hábito de fumar influencia na pressão arterial e deve ser utilizado na modelagem. Ademais, a escolha do imc ou idade é quase que equivalente (ao menos até agora) para o modelo. \n",
-    "\n",
-    "Em breve, novas estatísticas serão realizadas."
+    "Após todas as etapas fica evidente que é extremamente necessário realizar uma análise dos dados antes de gerar um modelo. Caso isso não tivesse sido feito, teríamos escolhido um modelo errado que obteria falsas conclusões. Além disso, ao final foi possível identificar que o hábito de fumar influencia na pressão arterial e deve ser utilizado na modelagem. Ademais, a escolha do imc ou idade é quase que equivalente (ao menos até agora) para o modelo."
    ]
   }
  ],
