Time Serie analysis and changes in text

--- a/AccelerometerAnalysisParkinsonsCannabidiol/Scripts/0-Process_Files.ipynb
+++ b/AccelerometerAnalysisParkinsonsCannabidiol/Scripts/0-Process_Files.ipynb
@@ -158,6 +158,17 @@
     "df_final.loc[:,['pse','pspf1','pspf2','pspf3','psp1','psp2','psp3','wpsf','evaluate','measure','drug']].to_csv('parkinson_v1.csv')\n",
     "df_final.to_csv('parkinson_v2.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Observações\n",
+    "\n",
+    "- Os scripts <b>featureExtraction.py</b> e <b>readAccelerometerData.py</b> foram desenvolvidos pelo professor Moacir e seus códigos originais se encontram em https://github.com/maponti/AccelerometerAnalysisParkinsonsCannabidiol. \n",
+    "\n",
+    "- Os dados 'brutos' não se encontram neste repositório por questões de confidencialidade das pessoas envolvidas no experimento. Assim não é possível executar este notebook."
+   ]
   }
  ],
  "metadata": {
