Try improve classification

--- a/AccelerometerAnalysisParkinsonsCannabidiol/Scripts/3-Time_serie_Analysis.ipynb
+++ b/AccelerometerAnalysisParkinsonsCannabidiol/Scripts/3-Time_serie_Analysis.ipynb
@@ -351,7 +351,11 @@
     "\n",
     "Assim, nossa suposição inicial de que por exemplo pessoas que usam a mesma droga possuem séries parecidas acabou sendo equivocada. Mesmo realizando outros tipos de análises com a correlação também não foi possível extrair informações úteis.\n",
     "\n",
-    "Portanto, concluímos que as correlações (independente da forma como você olha) está distribuída de maneira muito aleatória nos dados não sendo interessante para nós."
+    "Portanto, concluímos que as correlações (independente da forma como você olha) está distribuída de maneira muito aleatória nos dados não sendo interessante para nós.\n",
+    "\n",
+    "## 4. Observação\n",
+    "\n",
+    "- É importante notar que testamos as correlações tanto para o acelerômetro como para o giroscópio."
    ]
   }
  ],
