--- a/AccelerometerAnalysisParkinsonsCannabidiol/Scripts/4-Modeling.ipynb
+++ b/AccelerometerAnalysisParkinsonsCannabidiol/Scripts/4-Modeling.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Modeling\n",
     "\n",
-    "Vamos realizar uma modelagem dos dados com algoritmos de machine learning."
+    "Nosso principal objetivo na modelagem é realizar uma clusterização dos dados para posteriomente criar um sistema descritivo, ou seja, nossa meta é criar visualizações que possam ser úteis para os médicos.\n",
+    "\n",
+    "Assim, mesmo que os nossos dados possuam rótulos devidamente prontos nós tentaremos utilizar a clusterização. Contudo, inicialmente iremos utilizar algoritmos supervisionados para averiguar se os dados na forma como estão conseguem distinguir bem as classes."
    ]
   },
   {
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +32,7 @@
     "\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.metrics import roc_auc_score, confusion_matrix\n",
@@ -41,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,16 +68,29 @@
     "\n",
     "## 2.1 Classificação\n",
     "\n",
+    "Iremos realizar a modelagem com 3 algoritmos supervisionados:\n",
+    "\n",
+    "- Árvore de Decisão\n",
+    "- Random Forest\n",
+    "- Regressão Logística\n",
+    "\n",
+    "Como principal métrica de avaliaçã iremos utilizar o AUC (Área Under Curve) por nosso problema ser binário. De qualquer forma também iremos avaliar acurácia, sensibilidade, especificidade e erros para cada pessoa.\n",
+    "\n",
+    "Por fim, para garantir o poder generativo dos nossos algoritmos será utilizado uma variação do k-fold.\n",
+    "\n",
+    "Gostaríamos de lembrar que será utilizado os dados obtidos após a aplicação do PCA.\n",
+    "\n",
     "### 2.1.1 Sem variáveis categórias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def classifier(X,Y,split=1):\n",
+    "'''Realiza uma avaliação da classificação'''\n",
+    "def evaluate_classifier(X,Y,split=1,type_clf='dt'):\n",
     "    \n",
     "    #Pessoas do dataset\n",
     "    unique_people = X.index.unique()\n",
@@ -101,10 +117,15 @@
     "            X_train,X_test,Y_train,Y_test = train_test_split(X,Y,stratify=Y,test_size=0.4)\n",
     "\n",
     "        #Criando classificador\n",
-    "        dt = DecisionTreeClassifier().fit(X_train,Y_train)\n",
+    "        if(type_clf == 'dt'):\n",
+    "            clf = DecisionTreeClassifier().fit(X_train,Y_train)\n",
+    "        elif(type_clf == 'rf'):\n",
+    "            clf = RandomForestClassifier(n_estimators=100).fit(X_train,Y_train)\n",
+    "        else:\n",
+    "            clf = LogisticRegression(solver='liblinear',penalty='l1')\n",
     "\n",
     "        #Matrix de confusao\n",
-    "        tn, fp, fn, tp = confusion_matrix(Y_test,dt.predict(X_test)).ravel()\n",
+    "        tn, fp, fn, tp = confusion_matrix(Y_test,clf.predict(X_test)).ravel()\n",
     "\n",
     "        #Sensibilidade\n",
     "        sens = tp/(tp+fn)\n",
@@ -116,10 +137,10 @@
     "        score = (tn+tp)/(tn+tp+fn+fp)\n",
     "        \n",
     "        #AUC\n",
-    "        auc = roc_auc_score(Y_test,dt.predict(X_test))\n",
+    "        auc = roc_auc_score(Y_test,clf.predict(X_test))\n",
     "        \n",
     "        #Pessoas que erraram\n",
-    "        error = (dt.predict(X_test) == Y_test)\n",
+    "        error = (clf.predict(X_test) == Y_test)\n",
     "        list_error = np.append(list_error,error[error == False].index.unique().values)\n",
     "        list_score.append(score)\n",
     "        list_sens.append(sens)\n",
@@ -138,25 +159,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_parkinson = df_parkinson.loc[(df_parkinson['measure'] == 'P') & (df_parkinson['evaluate'] == 1),['PC4','PC5','drug']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.5169193548387098\n",
+      "Score: 0.5169193548387098\n",
+      "Sensibilidade: 0.5142903225806451\n",
+      "Especificidade: 0.5195483870967742 \n",
+      "\n",
+      "person_10    0.047209\n",
+      "person_12    0.046923\n",
+      "person_4     0.046923\n",
+      "person_8     0.046636\n",
+      "person_18    0.046636\n",
+      "person_19    0.046541\n",
+      "person_16    0.046445\n",
+      "person_7     0.046445\n",
+      "person_11    0.046349\n",
+      "person_21    0.046063\n",
+      "person_17    0.046063\n",
+      "person_20    0.046063\n",
+      "person_2     0.045967\n",
+      "person_0     0.045872\n",
+      "person_13    0.045298\n",
+      "person_5     0.045203\n",
+      "person_3     0.043865\n",
+      "person_14    0.043769\n",
+      "person_1     0.043578\n",
+      "person_15    0.043291\n",
+      "person_9     0.042527\n",
+      "person_6     0.042336\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "#Separando dataset em variaveis dependentes e independentes\n",
     "X = df_parkinson.select_dtypes('float')\n",
     "Y = df_parkinson['drug']\n",
     "\n",
     "#Classificacao\n",
-    "classifier(X,Y,split=2)"
+    "evaluate_classifier(X,Y,split=2)"
    ]
   },
   {
@@ -168,9 +215,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.4798961038961039\n",
+      "Score: 0.4798961038961039\n",
+      "Sensibilidade: 0.47553246753246753\n",
+      "Especificidade: 0.48425974025974017 \n",
+      "\n",
+      "person_20    0.050638\n",
+      "person_2     0.048998\n",
+      "person_7     0.047359\n",
+      "person_18    0.046995\n",
+      "person_17    0.046812\n",
+      "person_1     0.046084\n",
+      "person_16    0.045537\n",
+      "person_13    0.045173\n",
+      "person_4     0.045173\n",
+      "person_12    0.045173\n",
+      "person_14    0.044991\n",
+      "person_21    0.044627\n",
+      "person_8     0.044627\n",
+      "person_0     0.044627\n",
+      "person_15    0.044627\n",
+      "person_9     0.044627\n",
+      "person_19    0.044627\n",
+      "person_5     0.044627\n",
+      "person_10    0.044444\n",
+      "person_11    0.044080\n",
+      "person_6     0.043534\n",
+      "person_3     0.042623\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "#Separando dataset em variaveis dependentes e independentes\n",
     "X = df_parkinson.select_dtypes('float').copy()\n",
@@ -181,7 +263,7 @@
     "X['evaluate'] = df_parkinson['evaluate']\n",
     "\n",
     "#Classificacao\n",
-    "classifier(X,Y)"
+    "evaluate_classifier(X,Y)"
    ]
   },
   {
@@ -193,9 +275,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.4842987012987013\n",
+      "Score: 0.4842987012987013\n",
+      "Sensibilidade: 0.4781558441558441\n",
+      "Especificidade: 0.4904415584415584 \n",
+      "\n",
+      "person_6     0.049353\n",
+      "person_12    0.046986\n",
+      "person_9     0.046986\n",
+      "person_3     0.046986\n",
+      "person_2     0.046986\n",
+      "person_17    0.046440\n",
+      "person_20    0.046440\n",
+      "person_21    0.046258\n",
+      "person_15    0.046075\n",
+      "person_8     0.046075\n",
+      "person_16    0.045893\n",
+      "person_14    0.045711\n",
+      "person_13    0.045711\n",
+      "person_18    0.045347\n",
+      "person_10    0.045347\n",
+      "person_11    0.044983\n",
+      "person_5     0.044983\n",
+      "person_4     0.044436\n",
+      "person_0     0.043708\n",
+      "person_19    0.042433\n",
+      "person_1     0.042069\n",
+      "person_7     0.040794\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "#Separando dataset em variaveis dependentes e independentes\n",
     "X = df_parkinson.select_dtypes('float').copy()\n",
@@ -205,7 +322,7 @@
     "X = pd.concat([X,pd.get_dummies(df_parkinson['measure'],prefix='measure'),pd.get_dummies(df_parkinson['evaluate'],prefix='evaluate')],axis=1)\n",
     "\n",
     "#Classificacao\n",
-    "classifier(X,Y)"
+    "evaluate_classifier(X,Y)"
    ]
   },
   {
@@ -217,9 +334,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.5025324675324675\n",
+      "Score: 0.5025324675324675\n",
+      "Sensibilidade: 0.4959480519480519\n",
+      "Especificidade: 0.5091168831168831 \n",
+      "\n",
+      "person_9     0.048372\n",
+      "person_18    0.047827\n",
+      "person_5     0.047463\n",
+      "person_12    0.047463\n",
+      "person_14    0.047281\n",
+      "person_8     0.046918\n",
+      "person_13    0.046918\n",
+      "person_21    0.046554\n",
+      "person_16    0.046372\n",
+      "person_19    0.046372\n",
+      "person_2     0.046190\n",
+      "person_4     0.045827\n",
+      "person_10    0.045645\n",
+      "person_6     0.045645\n",
+      "person_15    0.044554\n",
+      "person_1     0.044190\n",
+      "person_7     0.044190\n",
+      "person_0     0.043826\n",
+      "person_20    0.043644\n",
+      "person_11    0.042008\n",
+      "person_3     0.041826\n",
+      "person_17    0.040917\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "#Separando dataset em variaveis dependentes e independentes\n",
     "X = df_parkinson.select_dtypes('float').copy()\n",
@@ -228,43 +380,90 @@
     "X = pd.concat([X,pd.get_dummies(df_parkinson['measure'] + '_' + df_parkinson['evaluate'].map(lambda x: str(x)))],axis=1)\n",
     "\n",
     "#Classificacao\n",
-    "classifier(X,Y)"
+    "evaluate_classifier(X,Y)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Clusterização"
+    "A utilização de vários tipos de codificação para a variável fase e medida foram tentados por nossas análises mostrarem que existem diferenças dependendo da onde você olha.\n",
+    "\n",
+    "Contudo, independente da forma de codificação utilizada não conseguimos bons resultados. Esse fato ocorreu mesmo havendo uma variação dos algoritmos supervisionados.\n",
+    "\n",
+    "Acreditamos que essas codificações não derão certo por em cada fase/medida possuir um comportamente diferente. Vamos avaliar essa hipótese na próxima seção."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.4 Classificação considerando apenas uma fase e medida"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Divisão dataset\n",
-    "X = df_parkinson.select_dtypes('float')\n",
+    "#Filtro selecionado a medida P na avaliação 1 com PC4 e PC5\n",
+    "df_parkinson = df_parkinson.loc[(df_parkinson['measure'] == 'P') & (df_parkinson['evaluate'] == 1),['PC4','PC5','drug']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.7508103174603175\n",
+      "Score: 0.7356363636363636\n",
+      "Sensibilidade: 0.7303984126984125\n",
+      "Especificidade: 0.7712222222222223 \n",
+      "\n",
+      "person_8     0.149243\n",
+      "person_0     0.128611\n",
+      "person_15    0.087345\n",
+      "person_7     0.077029\n",
+      "person_17    0.072902\n",
+      "person_18    0.066713\n",
+      "person_19    0.061898\n",
+      "person_11    0.061210\n",
+      "person_2     0.057084\n",
+      "person_6     0.047455\n",
+      "person_9     0.039890\n",
+      "person_3     0.039890\n",
+      "person_21    0.024072\n",
+      "person_16    0.022008\n",
+      "person_12    0.017882\n",
+      "person_1     0.017882\n",
+      "person_14    0.014443\n",
+      "person_20    0.011692\n",
+      "person_13    0.002751\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Separando dataset em variaveis dependentes e independentes\n",
+    "X = df_parkinson.loc[:,['PC4','PC5']]\n",
+    "Y = df_parkinson['drug']\n",
     "\n",
-    "#Clusterizacao\n",
-    "kmeans = KMeans(n_clusters=2).fit(X)\n",
+    "#Classificacao\n",
+    "evaluate_classifier(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos ver que agora obtivemos bons resultados. Contudo isso foi a custa de uma grande diminuição da quantidade de amostras no dataset.\n",
     "\n",
-    "#Labels preditos pelo kmeans\n",
-    "X['label'] = kmeans.predict(X)\n",
-    "\n",
-    "#Pairplot\n",
-    "sns.pairplot(data=X,vars=['PC4','PC5'],hue='label')\n",
-    "plt.show()\n",
-    "\n",
-    "#Pairplot\n",
-    "sns.pairplot(data=df_parkinson,vars=['PC4','PC5'],hue='drug')\n",
-    "plt.show()\n",
-    "\n",
-    "#Swap\n",
-    "X['label'] = X['label'].map({0:1,1:0})\n",
-    "\n",
-    "(X['label'] == df_parkinson['drug']).sum() / X.shape[0]"
+    "Salientamos também que esse valor só foi possível de alcançar utilizando o PC4 e PC5. Qualquer outro componente utilizado acaba 'atrapalhando' na classificação."
    ]
   }
  ],
